<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="percent">Percent</string>
    <string name="fifteen">15%</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="tip">Tip</string>
    <string name="tipdollar">$0.00</string>
    <string name="total">Total</string>
    <string name="totaldollar">$0.00</string>
</resources>
