<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.townsend.tipcalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_amount"
        android:id="@+id/billAmountLabel"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/billAmountEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/billAmountEditText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:id="@+id/percentLabel"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_alignTop="@+id/percentTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifteen"
        android:id="@+id/percentTextView"
        android:textSize="25sp"
        android:layout_alignBottom="@+id/downButton"
        android:layout_alignLeft="@+id/billAmountEditText"
        android:layout_alignStart="@+id/billAmountEditText" />

    <Button
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/minus"
        android:id="@+id/downButton"
        android:textSize="25sp"
        android:layout_below="@+id/billAmountEditText"
        android:layout_toLeftOf="@+id/upButton"
        android:layout_toStartOf="@+id/upButton" />

    <Button
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/plus"
        android:id="@+id/upButton"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:textSize="25sp"
        android:layout_above="@+id/tipLabel"
        android:layout_alignRight="@+id/billAmountEditText"
        android:layout_alignEnd="@+id/billAmountEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:id="@+id/tipLabel"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/percentLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipdollar"
        android:id="@+id/tipTextView"
        android:textSize="25sp"
        android:layout_alignTop="@+id/tipLabel"
        android:layout_alignLeft="@+id/percentTextView"
        android:layout_alignStart="@+id/percentTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:id="@+id/totalLabel"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@+id/tipLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totaldollar"
        android:id="@+id/totalTextView"
        android:textSize="25sp"
        android:layout_alignTop="@+id/totalLabel"
        android:layout_alignLeft="@+id/tipTextView"
        android:layout_alignStart="@+id/tipTextView" />
</RelativeLayout>
